--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleDependency
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
@@ -5,6 +6,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+
     compileSdkVersion 31
     buildToolsVersion '30.0.3'
     defaultConfig {
@@ -42,6 +44,7 @@ dependencies {
     implementation 'tech.liujin:scaleImage:1.0.1'
     implementation 'com.github.China-Android:Android-SearchFlowLayout:1.1'
     implementation 'com.jaredrummler:material-spinner:1.1.0'
+    implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
